--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header>
             <div class="left-section">
                 <div class="company-logo">
-                    <a href="hompage.html"><img class="logo" src="imagesource/jsk-enterprises-logo-zip-file/png/logo-no-background.png" alt=""></a>
+                    <a href="index.html"><img class="logo" src="imagesource/jsk-enterprises-logo-zip-file/png/logo-no-background.png" alt=""></a>
                 </div>
             </div>
 
