New Fonts and Intro to website

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,6 +30,10 @@
                 </div>
             </div>
         </header>
+
+        <article class="Intro-box">
+            <p class="intro-text">Welcome to JSK Enterprises, the game-changing goods transport company! We don&#39;t just move stuff around, we make dreams a reality. Hassle-free, digitally-driven, and extremely efficient &#8209; that&#39;s what we&#39;re all about.</p>
+        </article>
 
         <nav class="services">
             <div><p class="service-text">Servicing</p></div>
