Class name correction for intro and styling

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </header>
 
-        <article class="Intro-box">
+        <article class="intro-box">
             <p class="intro-text">Welcome to JSK Enterprises, the game-changing goods transport company! We don&#39;t just move stuff around, we make dreams a reality. Hassle-free, digitally-driven, and extremely efficient &#8209; that&#39;s what we&#39;re all about.</p>
         </article>
 
