Services Menu Change and styling.

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             <p class="intro-text">Welcome to JSK Enterprises, the game-changing goods transport company! We don&#39;t just move stuff around, we make dreams a reality. Hassle-free, digitally-driven, and extremely efficient &#8209; that&#39;s what we&#39;re all about.</p>
         </article>
 
-        <nav class="services">
-            <div><p class="service-text">Servicing</p></div>
-            <div><p class="service-text">Transport</p></div>
-            <div><p class="service-text">Work Orders</p></div>
-            <div><p class="service-text">Long Trips</p></div>
-            <div><p class="service-text">Help and Support</p></div>
+        <nav class="services-menu">
+            <button class="service-text">Local Trips</button>
+            <button class="service-text">Long Trips</button>
+            <button class="service-text">Work Orders</button>
+            <button class="service-text">Get a Quote</button>
+            <button class="service-text">Help and Support</button>
         </nav>
 
         <article class="hompage-grid">
