fixing indentation on index.html

--- a/index.html
+++ b/index.html
@@ -1,85 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test website</title>
-    <link rel="stylesheet" href="CSS_files/homepage-header.css" />
-    <link rel="stylesheet" href="CSS_files/homepage-grid.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Test website</title>
+        <link rel="stylesheet" href="CSS_files/homepage-header.css" />
+        <link rel="stylesheet" href="CSS_files/homepage-grid.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
+    </head>
 
-  <body>
-    <main>
-      <header>
-        <div class="left-section">
-          <div class="company-logo">
-            <a href="index.html"
-              ><img
-                class="logo"
-                src="imagesource/jsk-enterprises-logo-zip-file/png/logo-no-background.png"
-                alt=""
-            /></a>
-          </div>
-        </div>
-
-        <div class="right-section">
-          <div class="menu-content">
-            <div class="login">
-              <a href="login.html"
-                ><img
-                  class="content-icon"
-                  src="imagesource/Icons/login.svg"
-                  alt="login"
-              /></a>
+    <body>
+        <main>
+        <header>
+            <div class="left-section">
+                <div class="company-logo">
+                    <a href="index.html"><img class="logo" src="imagesource/jsk-enterprises-logo-zip-file/png/logo-no-background.png" alt=""/></a>
+                </div>
             </div>
-          </div>
-        </div>
-      </header>
 
-      <article class="intro-box">
-        <p class="intro-text">Welcome to JSK Enterprises</p>
-        <div class="intro-grid">
-          <div class="subtext">
-            <div class="intro-subtext-a">JSK Enterprises is an upcoming transport company specializing in industrial goods transportation. Our mission is to provide exceptional, reliable, and efficient services that exceed the expectations of our clients, making every shipment a smooth experience.</div>
-            <div class="intro-subtext-b">With our dedicated team of experienced professionals and our unmatched attention to detail, your business won’t miss a beat. We strive to be the go-to solution for any industrial goods transportation need.</div>
-          </div>
-          <div class="intro-image">
-            <img class="card" src="imagesource/wallpaperflare.com_wallpaper_KvLtest1.jpg" alt="">
-          </div>
-        </div>
-      </article>
+            <div class="right-section">
+                <div class="menu-content">
+                    <div class="login">
+                        <a href="login.html"><img class="content-icon" src="imagesource/Icons/login.svg" alt="login"/></a>
+                    </div>
+                </div>
+            </div>
+        </header>
 
-      <nav class="services-menu">
-        <button class="service-text">Local Trips</button>
-        <button class="service-text">Long Trips</button>
-        <button class="service-text">Work Orders</button>
-        <button class="service-text">Get a Quote</button>
-        <button class="service-text">Help and Support</button>
-      </nav>
+        <article class="intro-box">
+            <p class="intro-text">Welcome to JSK Enterprises</p>
+            <div class="intro-grid">
+                <div class="subtext">
+                    <div class="intro-subtext-a">JSK Enterprises is an upcoming transport company specializing in industrial goods transportation. Our mission is to provide exceptional, reliable, and efficient services that exceed the expectations of our clients, making every shipment a smooth experience.</div>
+                    <div class="intro-subtext-b">With our dedicated team of experienced professionals and our unmatched attention to detail, your business won’t miss a beat. We strive to be the go-to solution for any industrial goods transportation need.</div>
+                </div>
+                <div class="intro-image">
+                    <img class="card" src="imagesource/wallpaperflare.com_wallpaper_KvLtest1.jpg" alt="">
+                </div>
+            </div>
+        </article>
 
-      <article class="hompage-grid"></article>
+        <nav class="services-menu">
+            <button class="service-text">Local Trips</button>
+            <button class="service-text">Long Trips</button>
+            <button class="service-text">Work Orders</button>
+            <button class="service-text">Get a Quote</button>
+            <button class="service-text">Help and Support</button>
+        </nav>
 
-      <footer>
-        <div class="footer-box">
-          footer tab
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Praesentium numquam nobis rem error velit aut atque. Distinctio
-            dolores eveniet hic corporis culpa eos esse natus in, possimus, rem,
-            sint corrupti?
-          </p>
-        </div>
-      </footer>
+        <article class="homepage-grid"></article>
+
+        <footer>
+            <div class="footer-box">
+            footer tab
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Praesentium numquam nobis rem error velit aut atque. Distinctio
+                dolores eveniet hic corporis culpa eos esse natus in, possimus, rem,
+                sint corrupti?
+            </p>
+            </div>
+        </footer>
     </main>
-  </body>
+    </body>
 </html>
