Homepage grid and styling

--- a/index.html
+++ b/index.html
@@ -51,10 +51,18 @@
             <button class="service-text">Help and Support</button>
         </nav>
 
-        <article class="homepage-grid"></article>
+        <article class="homepage-grid">
+            <img src="imagesource/wallpaperflare.com_wallpaper_KvLtest1.jpg" alt="">
+            <div class="menu-title">
+                <div class="menu-explain "></div>
+                <div class="menu-actions">
+                    <button></button>
+                    <button></button>
+                </div>
+            </div>
+        </article>
 
         <footer>
-            <div class="footer-box">
             footer tab
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -62,7 +70,6 @@
                 dolores eveniet hic corporis culpa eos esse natus in, possimus, rem,
                 sint corrupti?
             </p>
-            </div>
         </footer>
     </main>
     </body>
