hompage-grid buttons

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <div class="menu-title">
                 <div class="menu-explain "></div>
                 <div class="menu-actions">
-                    <button></button>
-                    <button></button>
+                    <button>action1</button>
+                    <button>action2</button>
                 </div>
             </div>
         </article>
