Homepage-grid and footer styling change

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Test website</title>
-        <link rel="stylesheet" href="CSS_files/homepage-header.css" />
-        <link rel="stylesheet" href="CSS_files/homepage-grid.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
+        <link rel="stylesheet" href="CSS_files/homepage-header.css">
+        <link rel="stylesheet" href="CSS_files/homepage-grid.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -24,7 +25,7 @@
             <div class="right-section">
                 <div class="menu-content">
                     <div class="login">
-                        <a href="login.html"><img class="content-icon" src="imagesource/Icons/login.svg" alt="login"/></a>
+                        <a href="HTML_files/login.html"><img class="content-icon" src="imagesource/Icons/login.svg" alt="login"/></a>
                     </div>
                 </div>
             </div>
@@ -54,23 +55,25 @@
         <article class="homepage-grid">
             <img src="imagesource/wallpaperflare.com_wallpaper_KvLtest1.jpg" alt="">
             <div class="menu-title">
-                <div class="menu-explain "></div>
+                <p class="menu-name">lorem ipsum</p>
+                <div class="menu-explain ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus distinctio animi eius dolore, repudiandae quo, aspernatur, culpa esse pariatur amet voluptatum quibusdam! Hic ratione ex voluptate aliquam autem beatae maiores.</div>
                 <div class="menu-actions">
-                    <button>action1</button>
-                    <button>action2</button>
+                    <button class="action1">action1</button>
+                    <button class="action2">action2</button>
                 </div>
             </div>
         </article>
-
-        <footer>
-            footer tab
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Praesentium numquam nobis rem error velit aut atque. Distinctio
-                dolores eveniet hic corporis culpa eos esse natus in, possimus, rem,
-                sint corrupti?
-            </p>
-        </footer>
     </main>
+
+    <footer>
+        footer tab
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Praesentium numquam nobis rem error velit aut atque. Distinctio
+            dolores eveniet hic corporis culpa eos esse natus in, possimus, rem,
+            sint corrupti?
+        </p>
+        <p>best viewed on 1200x768</p>
+    </footer>
     </body>
 </html>
